--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "pydantic",
     "google-genai",
     "openpyxl",
+    "networkx",
+    "python-louvain",
 ]
 
 [project.scripts]
